syntax = "proto3";

package ai.metathings.component;

import "google/protobuf/wrappers.proto";

import "github.com/mwitkow/go-proto-validators/validator.proto";

import "github.com/nayotta/metathings/pkg/proto/deviced/model.proto";

message PushFrameToFlowRequest {
	message Ping {}

	google.protobuf.StringValue id = 1 [(validator.field) = {msg_exists: true}];
	oneof request {
		Ping ping = 2;
		ai.metathings.service.deviced.OpFrame frame = 3;
	}
}

message PushFrameToFlowResponse {
	message Pong {}
	message Ack {}

	string id = 1 [(validator.field) = {msg_exists: true}];
	oneof response {
		Pong pong = 2;
		Ack ack = 3;
	}
}
